[tool.poetry]
name = "mlflow-tracking-server"
version = "0.1.0"
description = "MLflow tracking server"
authors = ["rama17aneesh <aneeshtumuluri@gmail.com>"]
repository="git@github.com:rama17aneesh/mlflow-tracking-server.git"
classifiers =[]

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "==2.17.0"
psycopg2-binary = "~=2.9.6"

[build-system]
require = ["poetry-core"]
build-backend ="poetry.core.masonry.api"

